--- a/css/style.css
+++ b/css/style.css
@@ -83,35 +83,27 @@ body {
 }
 
 .nav-icon {
-    width: 20px;
-    height: 20px;
+    width: 24px;
+    height: 24px;
     position: relative;
     overflow: hidden;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.icon-img {
+    width: 20px;
+    height: 20px;
+    object-fit: contain;
+    filter: brightness(0) invert(1);
 }
 
 /* Discord icon */
 .discord-icon {
     width: 16.8px;
     height: 20px;
-}
-
-.discord-icon-inner1 {
-    width: 12.99px;
-    height: 15.04px;
-    left: 1.9px;
-    top: 0;
-    position: absolute;
-    background: white;
-}
-
-.discord-icon-inner2 {
-    width: 16.8px;
-    height: 16.31px;
-    left: 0;
-    top: 3.66px;
-    position: absolute;
-    background: white;
 }
 
 /* Twitter icon */
@@ -457,4 +449,29 @@ body {
     right: auto;
     bottom: auto;
     margin: 0;
+}
+
+.background-image-element {
+    position: absolute;
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+    object-position: center top;
+    z-index: 1;
+}
+
+/* Исправляем любые другие пути к изображениям, если они есть */
+.background-image {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-image: url('../public/images/freepik-enhance-457201.svg');
+    background-position: center top;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+/* Удаляем устаревшие стили для иконок */
+.discord-icon-inner1, .discord-icon-inner2, .twitter-icon-inner, .telegram-icon-inner {
+    display: none;
 } 
